Fix checkbox alignment on 'currently being entered into NOMIS' page

--- a/mtp_cashbook/assets-src/stylesheets/views/_locked.scss
+++ b/mtp_cashbook/assets-src/stylesheets/views/_locked.scss
@@ -29,6 +29,9 @@
       text-align: left;
       padding-left: 25px;
     }
+    .mtp-all {
+      padding-left: 2.1em;
+    }
   }
 }
 
